<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Shamu Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Discard</string>
    <string name="action_reset">Reset</string>
    <string name="action_help">Help</string>
    <string name="action_add">Add</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="status_bar_settings">Status Bar</string>
    <string name="navigation_bar_settings">Navigation Bar</string>
    <string name="recents_settings">Recents</string>
    <string name="button_settings">Buttons</string>
    <string name="app_circle_settings">App Circle</string>
    <string name="animation_settings">Animations</string>
    <string name="lockscreen_settings">Lockscreen</string>
    <string name="choose_app">Choose application</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="show_in_launcher_title">Show in launcher</string>
    <string name="show_in_launcher_summary_on">Shortcut displayed in launcher app drawer</string>
    <string name="show_in_launcher_summary_off">Shortcut hidden in launcher app drawer</string>
    <string name="status_bar_clock">Clock and date</string>
    <string name="status_bar_clock_title">Clock and date style</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="clock_color_title">Color</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="status_bar_clock_style_reset_message">Reset clock color?</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Enable statusbar double tap gesture to put device to sleep.</string>
    <string name="status_bar_power_menu_title">Show power button</string>
    <string name="status_bar_power_menu_dialog_title">Set tap and long-press actions</string>
    <string name="status_bar_power_menu_off">Disabled</string>
    <string name="status_bar_power_menu_action_screen_off">Screen off - Power menu</string>
    <string name="status_bar_power_menu_action_dialog">Power menu - Screen off</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Right edge of the status bar pulls down Quick Settings</string>
    <string name="block_on_secure_keyguard_title">Lock when secure</string>
    <string name="block_on_secure_keyguard_summary">Disable quick settings on secure lockscreen.</string>
    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
    <string name="network_traffic_title">Show network traffic</string>
    <string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="status_bar_show_weather_title">Show weather</string>
    <string name="status_bar_show_weather_summary">Show the weather in the status bar header</string>
    <string name="navigation_bar_height">Navigation bar height</string>
    <string name="navigation_bar_height_48">48dp (default)</string>
    <string name="navigation_bar_height_44">44dp</string>
    <string name="navigation_bar_height_40">40dp</string>
    <string name="navigation_bar_height_36">36dp</string>
    <string name="navigation_bar_height_32">32dp</string>
    <string name="navigation_bar_height_28">28dp</string>
    <string name="navigation_bar_height_24">24dp</string>
    <string name="navigation_bar_height_20">20dp</string>
    <string name="navigation_bar_height_0">0dp (hide)</string>
    <string name="navigation_swap_back_recents_title">Swap back and recents</string>
    <string name="navigation_swap_back_recents_summary">Change the order of the navigation bar buttons</string>
    <string name="recents_show_searchbar">Show search bar</string>
    <string name="recents_show_searchbar_summary">Enable or disable the Google search bar in the recents menu</string>
    <string name="recents_show_clearall">Show clear all</string>
    <string name="recents_show_clearall_summary">Enable or disable dismiss all recents button</string>
    <string name="recents_clear_all_position">Clear all position</string>
    <string name="recents_clear_all_position_top_left">Top left</string>
    <string name="recents_clear_all_position_top_center">Top center</string>
    <string name="recents_clear_all_position_top_right">Top right</string>
    <string name="recents_clear_all_position_bottom_left">Bottom left</string>
    <string name="recents_clear_all_position_bottom_center">Bottom center</string>
    <string name="recents_clear_all_position_bottom_right">Bottom right</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_key_cursor_control_off">Disabled</string>
    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="app_circle_bar_title">App circle bar</string>
    <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
    <string name="app_circle_bar_included_apps_title">Included apps</string>
    <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="toast_animation_title">Toast animations</string>
    <string name="toast_animation_summary">Select and preview system toast animation</string>
    <string name="toast_none_animation">None</string>
    <string name="toast_default_animation">Default</string>
    <string name="toast_fade_animation">Fade animation</string>
    <string name="toast_SlideRight_animation">Slide right</string>
    <string name="toast_SlideLeft_animation">Slide left</string>
    <string name="toast_Xylon_animation">Xylon animation</string>
    <string name="toast_Toko_animation">Toko animation</string>
    <string name="toast_Tn_animation">Tn animation</string>
    <string name="toast_Honami_animation">Honami animation</string>
    <string name="toast_FastFade_animation">Fast fade</string>
    <string name="toast_GrowFade_animation">Grow fade</string>
    <string name="toast_GrowFadeCenter_animation">Grow fade center</string>
    <string name="toast_GrowFadeBottom_animation">Grow fade bottom</string>
    <string name="toast_Translucent_animation">Translucent animation</string>
    <string name="lockscreen_shortcuts_title">Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">View or change custom lock screen shortcuts</string>
    <string name="lockscreen_shorcuts_longpress_title">Shortcuts longpress</string>
    <string name="lockscreen_shorcuts_longpress_summary">Open custom lock screen shortcuts on longpress</string>
    <string name="shortcut_action_none">None</string>
    <string name="shortcut_action_app">Custom app</string>
    <string name="shortcut_action_home">Home</string>
    <string name="shortcut_action_back">Back</string>
    <string name="shortcut_action_menu">Menu</string>
    <string name="shortcut_action_ime">Open IME Switcher</string>
    <string name="shortcut_action_power_menu">Power menu</string>
    <string name="shortcut_action_recent">Recents</string>
    <string name="shortcut_action_power">Screen Off</string>
    <string name="shortcut_action_search">Search in app</string>
    <string name="shortcut_action_ring_vib">Ring/Vib</string>
    <string name="shortcut_action_ring_silent">Ring/Silent</string>
</resources>