<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/status_bar_settings" >

    <PreferenceScreen
        android:fragment="gb.shamu.settings.StatusBarClockStyle"
        android:key="status_bar_clock_style"
        android:title="@string/status_bar_clock" />

    <ListPreference
        android:dialogTitle="@string/status_bar_battery_percentage_dialog_title"
        android:entries="@array/status_bar_battery_percentage_entries"
        android:entryValues="@array/status_bar_battery_percentage_values"
        android:key="status_bar_show_battery_percent"
        android:title="@string/status_bar_battery_percentage_title" />

    <PreferenceScreen
        android:fragment="gb.shamu.settings.StatusBarNetworkTraffic"
        android:key="status_bar_network_traffic_state"
        android:summary="@string/network_traffic_summary"
        android:title="@string/network_traffic_title" />

    <ListPreference
        android:dialogTitle="@string/status_bar_power_menu_dialog_title"
        android:entries="@array/status_bar_power_menu_entries"
        android:entryValues="@array/status_bar_power_menu_values"
        android:key="status_bar_power_menu"
        android:persistent="false"
        android:title="@string/status_bar_power_menu_title" />

    <SwitchPreference
        android:key="status_bar_show_weather"
        android:summary="@string/status_bar_show_weather_summary"
        android:title="@string/status_bar_show_weather_title" />
    <SwitchPreference
        android:key="status_bar_brightness_control"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:title="@string/status_bar_toggle_brightness" />
    <SwitchPreference
        android:key="status_bar_quick_qs_pulldown"
        android:persistent="true"
        android:summary="@string/status_bar_quick_qs_pulldown_summary"
        android:title="@string/status_bar_quick_qs_pulldown_title" />
    <SwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:persistent="false"
        android:summary="@string/block_on_secure_keyguard_summary"
        android:title="@string/block_on_secure_keyguard_title" />

</PreferenceScreen>