<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 AICP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/gb.shamu.settings"
    android:title="@string/app_circle_settings" >

    <SwitchPreference
        android:key="enable_app_circle_bar"
        android:summary="@string/app_circle_bar_summary"
        android:title="@string/app_circle_bar_title" />

    <gb.shamu.settings.util.AppMultiSelectListPreference
        android:dependency="enable_app_circle_bar"
        android:key="app_circle_bar_included_apps"
        android:persistent="false"
        android:summary="@string/app_circle_bar_included_apps_summary"
        android:title="@string/app_circle_bar_included_apps_title" />

    <SeekBarPreference
        android:defaultValue="4"
        android:dependency="enable_app_circle_bar"
        android:key="trigger_width"
        android:max="64"
        android:summary="@string/trigger_width_summary"
        android:title="@string/trigger_width_title"
        settings:min="4"
        settings:unitsLeft=""
        settings:unitsRight="px" />
    <SeekBarPreference
        android:defaultValue="0"
        android:dependency="enable_app_circle_bar"
        android:key="trigger_top"
        android:max="99"
        android:summary="@string/trigger_top_summary"
        android:title="@string/trigger_top_title"
        settings:min="0"
        settings:unitsLeft=""
        settings:unitsRight="%" />
    <SeekBarPreference
        android:defaultValue="100"
        android:dependency="enable_app_circle_bar"
        android:key="trigger_bottom"
        android:max="100"
        android:summary="@string/trigger_bottom_summary"
        android:title="@string/trigger_bottom_title"
        settings:min="1"
        settings:unitsLeft=""
        settings:unitsRight="%" />

</PreferenceScreen>