<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/gb.shamu.settings"
    android:title="@string/network_traffic_title" >

    <ListPreference
        android:entries="@array/show_network_traffic_state_entries"
        android:entryValues="@array/show_network_traffic_state_values"
        android:key="network_traffic_state"
        android:persistent="false"
        android:title="@string/show_network_traffic_state" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="0xffffffff"
        android:dependency="network_traffic_state"
        android:key="network_traffic_color"
        android:title="@string/network_traffic_color_style" />

    <ListPreference
        android:dependency="network_traffic_state"
        android:entries="@array/show_network_traffic_unit_entries"
        android:entryValues="@array/show_network_traffic_unit_values"
        android:key="network_traffic_unit"
        android:persistent="false"
        android:title="@string/show_network_traffic_unit" />
    <ListPreference
        android:dependency="network_traffic_state"
        android:entries="@array/show_network_traffic_frequency_entries"
        android:entryValues="@array/show_network_traffic_frequency_values"
        android:key="network_traffic_period"
        android:persistent="false"
        android:title="@string/show_network_traffic_frequency" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="network_traffic_state"
        android:key="network_traffic_autohide"
        android:summary="@string/network_traffic_autohide_summary"
        android:title="@string/network_traffic_autohide" />

    <SeekBarPreference
        android:dependency="network_traffic_autohide"
        android:key="network_traffic_autohide_threshold"
        android:max="100"
        android:persistent="false"
        android:title="@string/network_traffic_autohide_threshold"
        app:min="0"
        app:unitsLeft=""
        app:unitsRight="kB/s" />

</PreferenceScreen>